hphp/hack/test/typecheck/coeffect_encapsulation/ctx_const_access.php.exp
File "ctx_const_access.php", line 8, characters 3-6:
`echo` or `print` builtin requires the capability IO, which is not provided by the context. (Typing[4401])
  File "ctx_const_access.php", line 4, characters 20-30:
  The local (enclosing) context provides the capability WriteProperty
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
